update lo 's order in lo result page

--- a/LOTAWeb/Areas/Admin/Views/LOResult/Index.cshtml
+++ b/LOTAWeb/Areas/Admin/Views/LOResult/Index.cshtml
@@ -1685,7 +1685,8 @@
          });
          
          let html = '<div class="d-flex flex-column gap-2">';
-         allLOs.forEach(lo => {
+         const sortedLOs = Array.from(allLOs.values()).sort((a, b) => a.name.localeCompare(b.name));
+         sortedLOs.forEach(lo => {
              let statusClass, statusText, retakeButton = '';
              
              // Check retake status for LO Overview & Actions
